--- a/index.tex
+++ b/index.tex
@@ -24,12 +24,12 @@
     xleftmargin=30pt,
 }
 
-\thesistitle{Grafické uživatelské rozhraní systému pro správu závěrečných prací}
+\thesistitle{Aplikace pro správu kvalifikačních prací průmyslového partnera Red Hat}
 \thesissubtitle{Bakalářská práce}
-\thesisstudent{Pavel Dedík}
+\thesisstudent{Jakub Čecháček}
 \thesiswoman{false}
 \thesisfaculty{fi}
-\thesisyear{jaro 2013}
+\thesisyear{podzim 2013}
 \thesislang{cs}
 
 \setlength{\parindent}{0,5cm}
@@ -46,11 +46,13 @@
 
 \tableofcontents
 
-\input{chapters/intro}
+\input{chapters/introduction}
 \input{chapters/chapter1}
 \input{chapters/chapter2}
 \input{chapters/chapter3}
 \input{chapters/chapter4}
+\input{chapters/chapter5}
+\input{chapters/conclusion}
 
 \cite{grails-documentation}
 \cite{groovy-in-action}
