--- a/index.tex
+++ b/index.tex
@@ -2,18 +2,25 @@
 
 \usepackage[plainpages=false, pdfpagelabels]{hyperref}
 \usepackage[utf8]{inputenc}
-\usepackage[czech]{babel}
+\usepackage[english,czech]{babel}
+\usepackage[T1]{fontenc}
 \usepackage{url}
-\usepackage{indentfirst}
+\usepackage{hyperref}
 \usepackage{listings}
+\usepackage{graphicx}
+\usepackage{dirtree}
+\usepackage{float}
+\usepackage{enumitem}
+
 \usepackage{blindtext} % TODO: remove import %
 
-\lstdefinelanguage{css}{
-    sensitive=false,
-    morecomment=[l]{//},
-    morecomment=[s]{/*}{*/},
-    morestring=[b]",
-}
+
+\floatstyle{plain}
+\newfloat{example}{H}{lop}
+\floatname{example}{Příklad}
+
+\newfloat{demo}{H}{lop}
+\floatname{demo}{Ukázka}
 
 \lstset{
     basicstyle=\small\ttfamily,
@@ -21,10 +28,13 @@
     numberstyle=\tiny,
     stepnumber=1,
     numbersep=15pt,
-    xleftmargin=30pt,
+    xleftmargin=0pt,
+    tabsize=3,
 }
 
-\thesistitle{Aplikace pro správu kvalifikačních prací průmyslového partnera Red Hat}
+
+
+\thesistitle{Aplikace pro správu kvalifikačních prací průmyslového partnera Red~Hat}
 \thesissubtitle{Bakalářská práce}
 \thesisstudent{Jakub Čecháček}
 \thesiswoman{false}
@@ -44,6 +54,8 @@
 
 \MainMatter
 
+\setcounter{secnumdepth}{3}
+\setcounter{tocdepth}{3}
 \tableofcontents
 
 \input{chapters/introduction}
@@ -52,6 +64,7 @@
 \input{chapters/chapter3}
 \input{chapters/chapter4}
 \input{chapters/chapter5}
+\input{chapters/chapter6}
 \input{chapters/conclusion}
 
 \cite{grails-documentation}
