Bibliography and corrections

--- a/index.bib
+++ b/index.bib
@@ -1,7 +1,44 @@
 @electronic{grails-documentation,
    title = "Grails Framework",
    url = "http://grails.org/doc/latest/"
- }
+}
+
+@electronic{mongo-documentation,
+   title = "MongoDB",
+   url = "http://docs.mongodb.org/manual/"
+}
+
+@electronic{grails-homepage,
+   title = "Grails homepage",
+   url = "http://grails.org"
+}
+
+@electronic{groovy-homepage,
+   title = "Groovy homepage",
+   url = "http://groovy.codehaus.org"
+}
+
+
+@electronic{openshift-pricing,
+   title = "OpenShift Online Pricing",
+   url = "https://www.openshift.com/products/pricing"
+}
+
+
+@electronic{mongo-homepage,
+   title = "MongoDB homepage",
+   url = "http://www.mongodb.org/"
+}
+
+@electronic{spring-homepage,
+   title = "Spring framwork homepage",
+   url = "http://spring.io/"
+}
+
+@electronic{fu-homepage,
+   title = "FineUploader homepage",
+   url = "http://fineuploader.com/"
+}
 
 @BOOK{groovy-in-action,
    title = "Groovy in Action",
@@ -10,4 +47,69 @@
    month = "January",
    year = 2007,
    isbn = "1932394842"
+}
+
+
+@BOOK{programming-grails,
+   title = "Programming Grails",
+   publisher = "Manning Publications",
+   author = "Dierk Koenig and Andrew Glover and Paul King and Guillaume Laforge and Jon Skeet and James Gossling",
+   month = "May",
+   year = 2013,
+   isbn = "1449323936"
+}
+
+@BOOK{spring-in-action,
+   title = "Spring in Action",
+   publisher = "Manning Publications",
+   author = "Craig Walls and Ryan Breidenbach",
+   month = "June",
+   year = 2011,
+   edition = "Third",
+   isbn = "1449323936"
+}
+
+@BOOK{grails-in-action,
+   title = "Grails in Action",
+   publisher = "Manning Publications",
+   author = "Glen Smith and Peter Ledbrook",
+   month = "May",
+   year = 2009,
+   isbn = "1933988932"
+}
+
+
+@BOOK{is-intro,
+   title = "Introduction to Information Systems",
+   publisher = "McGraw-Hill",
+   author = "James A. O'Brien",
+   month = "June",
+   year = 2003,
+   edition = "Eleventh",
+   isbn = "0071151095"
+}
+
+@BOOK{fowler-patterns,
+   title = "Patterns of Enterprise Application Architecture",
+   publisher = "Addison-Wesley Professional",
+   author = "Martin Fowler",
+   month = "November",
+   year = 2002,
+   isbn = "0321127420"
+}
+
+@masterthesis{vena-bp,
+    author = "Václav Dedík",
+    title = "Thesis management system for industrial partner Red Hat",
+    school = "Masarykova univerzita",
+    address = "Brno",
+    year = 2013
+}
+
+@masterthesis{pavel-bp,
+    author = "Pavel Dedík",
+    title = "Grafické uživatelské rozhraní systému pro správu závěrečných prací",
+    school = "Masarykova univerzita",
+    address = "Brno",
+    year = 2013
 }
