--- a/index.tex
+++ b/index.tex
@@ -28,8 +28,10 @@
     numberstyle=\tiny,
     stepnumber=1,
     numbersep=15pt,
-    xleftmargin=0pt,
+    xleftmargin=15pt,
+    xrightmargin=15pt,
     tabsize=3,
+    breaklines=true,
 }
 
 
@@ -66,9 +68,6 @@
 \input{chapters/chapter5}
 \input{chapters/chapter6}
 \input{chapters/conclusion}
-
-\cite{grails-documentation}
-\cite{groovy-in-action}
 
 \bibliographystyle{IEEEtran}
 \bibliography{index}
