Changes missing in the repository

--- a/index.bib
+++ b/index.bib
@@ -98,7 +98,7 @@
    isbn = "0321127420"
 }
 
-@masterthesis{vena-bp,
+@BOOK{vena-bp,
     author = "Václav Dedík",
     title = "Thesis management system for industrial partner Red Hat",
     school = "Masarykova univerzita",
@@ -106,7 +106,7 @@
     year = 2013
 }
 
-@masterthesis{pavel-bp,
+@BOOK{pavel-bp,
     author = "Pavel Dedík",
     title = "Grafické uživatelské rozhraní systému pro správu závěrečných prací",
     school = "Masarykova univerzita",
